--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ readme = "README.md"
 packages = [{include = "easy_frontend"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 jinja2 = "^3.1.2"
 flask = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.12.0", allow-prereleases = true}
-mypy = "^0.991"
+mypy = "0.981"
 pytest-watch = "^4.2.0"
 
 [build-system]
