--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "easy_frontend"}]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.11"
 jinja2 = "^3.1.2"
 flask = "^2.2.2"
 
@@ -16,6 +16,7 @@ flask = "^2.2.2"
 black = {version = "^22.12.0", allow-prereleases = true}
 mypy = "0.981"
 pytest-watch = "^4.2.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
